--- a/kernel.bib
+++ b/kernel.bib
@@ -1,3 +1,12 @@
+@misc{misc:1,
+    title = {Intel® 64 and IA-32 architectures software developer’s manual combined volumes: 1, 2A, 2B, 2C, 2D, 3A, 3B, 3C, 3D, and 4},
+    author = {Intel},
+    url = {https://www.intel.com/content/www/us/en/developer/articles/technical/intel-sdm.html}
+}
+@misc{misc:2,
+    title = {OsDev Wiki},
+    url = {https://wiki.osdev.org/Expanded_Main_Page}
+}
 @book{book:1412,
    title =     {Algorithms},
    author =    {Sanjoy Dasgupta and Christos Papadimitriou and Umesh Vazirani},
